2002-04-22  Akim Demaille  <akim@epita.fr>

	Version 2.53a.

2002-04-22  Akim Demaille  <akim@epita.fr>

	* doc/autoconf.texi (Pretty Help Strings): Remove a spurious
	comma.
	Reported by Gregory Giannoni.

2002-04-22  Akim Demaille  <akim@epita.fr>

	* tests/m4sh.at (LINENO): Skip the test if LINENO cannot be unset.
	Fixes false failures on Darwin.

2002-04-21  Paul Eggert  <eggert@twinsun.com>

	* TODO, bin/autoupdate.in, doc/autoconf.texi,
	lib/autoconf/general.m4, lib/autoconf/libs.m4,
	lib/autoconf/status.m4, lib/m4sugar/m4sugar.m4, tests/m4sh.at,
	tests/tools.at: Minor spelling and grammar fixes.

2002-04-20  Paul Eggert  <eggert@twinsun.com>

	* doc/autoconf.texi (Shell Substitutions): Fix typos in yesterday's
	ZSH_VERSION fixes.  Bug reported by Raja R Harinath.
	* lib/autotest/general.m4 (AT_INIT): Likewise.
	* tests/atgeneral.m4 (AT_INIT): Likewise.

2002-04-19  Paul Eggert  <eggert@twinsun.com>

	* NEWS, TODO, bin/autom4te.in, bin/autoreconf.in, bin/autoupdate.in,
	doc/autoconf.texi, lib/freeze.mk, lib/Autom4te/Struct.pm,
	lib/autoconf/autoheader.m4, lib/autoconf/c.m4,
	lib/autoconf/functions.m4, lib/autoconf/general.m4,
	lib/autoconf/lang.m4, lib/autoconf/libs.m4, lib/autoscan/identifiers,
	lib/autotest/general.m4, lib/m4sugar/m4sh.m4, tests/atgeneral.m4,
	tests/atspecific.m4, tests/semantics.at, tests/torture.at:
	Minor spelling and grammar fixes.

	* doc/autoconf.texi: Follow the outline suggested in the GNU
	Sample Texts sections of the Texinfo 4.2 manual.  Most
	importantly, this makes sure that the copyright notices appear in
	all output formats.  You probably need Texinfo 4.2 to generate
	the manual now.

	Fix some bugs when using "$@" when there might be zero positional
	arguments in cases where this matters.

	* bin/autoconf.as: Rewrite so that the problem does not come up.
	* lib/autoconf/programs.m4 (AC_CHECK_PROG): Likewise.
	* lib/autoconf/status.m4 (AC_OUTPUT): Likewise.
	* lib/autotest/general.m4 (AT_INIT): Likewise.
